--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,3 @@
-altgraph==0.17
-appdirs==1.4.4
-arrow==0.16.0
-asgiref==3.2.7
-backcall==0.2.0
-beautifulsoup4==4.9.3
-bibtexparser==1.2.0
-certifi==2020.4.5.1
-cffi==1.14.3
-chardet==3.0.4
-ChatterBot==0.8.7
-chatterbot-corpus==1.1.2
-click==7.1.2
-colorama==0.4.3
-cryptography==3.1.1
-cycler==0.10.0
-decorator==4.4.2
-defusedxml==0.6.0
-distlib==0.3.1
-Django==3.0.6
-django-allauth==0.42.0
-django-environ==0.4.5
-djangorestframework==3.12.1
-fake-useragent==0.1.11
-filelock==3.0.12
-free-proxy==1.0.2
-future==0.18.2
-gunicorn==20.0.4
-idna==2.9
-ipython==6.4.0
-ipython-genutils==0.2.0
-jedi==0.17.1
-joblib==0.15.1
-kiwisolver==1.2.0
-krakenio==0.0.2
-limit==0.2.3
-lxml==4.5.2
-mathparse==0.1.2
-matplotlib==3.3.2
-mysql-connector-python==8.0.21
-nltk==3.5
-numpy==1.19.2
-oauthlib==3.1.0
-paho-mqtt==1.5.0
-pandas==1.1.2
-parso==0.7.0
-pefile==2019.4.18
-pickleshare==0.7.5
-Pillow==7.1.2
-pipenv==2020.8.13
-prompt-toolkit==1.0.18
-pycparser==2.20
-Pygments==2.6.1
-pyinstaller==4.0
-pyinstaller-hooks-contrib==2020.8
-PyJWT==1.7.1
-pymongo==3.10.1
-PyMySQL==0.9.3
-pyOpenSSL==19.1.0
-pyparsing==2.4.7
-pyscopus==1.0.3a2
-PySocks==1.7.1
-python-dateutil==2.8.1
-python-dotenv==0.14.0
-python-twitter==3.5
-python3-openid==3.1.0
-pytz==2020.1
-pywin32-ctypes==0.2.0
-PyYAML==3.13
-regex==2020.6.8
-requests==2.23.0
-requests-oauthlib==1.3.0
-scholarly==0.5
-scikit-learn==0.23.2
-scipy==1.5.2
-selenium==3.141.0
-simplegeneric==0.8.1
-six==1.15.0
-sklearn==0.0
-soupsieve==2.0.1
-SQLAlchemy==1.2.19
-sqlparse==0.3.1
-stem==1.8.0
-suds-py3==1.4.1.0
-threadpoolctl==2.1.0
-tqdm==4.46.1
-traitlets==4.3.3
-twilio==6.45.4
-urllib3==1.25.9
-virtualenv==20.1.0
-virtualenv-clone==0.5.4
-wcwidth==0.2.4
-websockets==8.1
-whitenoise==5.0.1
-wos==0.2.5
+Django
+gunicorn
+django-heroku
