--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 charity/charity/__pycache__
 charity/trust/__pycache__
 charity/trust/migrations/__pycache__
+
+
+#Environments
+trust/.env
+
+charity/.env
