--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-charity/charity/__pycache__
-charity/trust/__pycache__
-charity/trust/migrations/__pycache__
+trust/migrations/__pycache__
+charity/__pycache__
+trust/__pycache__
+trust/paytm/__pycache__
 trust/.env
 charity/.env
